k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: chyiyaqing/payment:v0.0.2
          volumeMounts:
            - name: sqlite-data
              mountPath: /data
      volumes:
        - name: sqlite-data
          persistentVolumeClaim:
            claimName: sqlite-payment-pvc
