k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  selector:
    app: payment
  ports:
    - name: grpc
      port: 8180
      protocol: TCP
      targetPort: 8180
  type: NodePort
