k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC # 说明gRPC后端
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: payment
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.local
      http:
        paths:
          - path: /Payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8180
  tls:
    - hosts:
      - ingress.local
